chore(config): :wrench: update conventional commits scopes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "conventionalCommits.scopes": [
     "packages",
-    "config"
+    "config",
+    "mocks",
+    "models",
+    "widgets",
+    "screens"
   ]
 }
